casestudy new landing on mobile + minor prevnext fix

--- a/assets/scss/_base/_base.scss
+++ b/assets/scss/_base/_base.scss
@@ -257,3 +257,10 @@ ul {
     display: none;
   }
 }
+.overlay {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  display: block;
+  position: absolute;
+}
