--- a/assets/scss/modules/_landing.scss
+++ b/assets/scss/modules/_landing.scss
@@ -43,9 +43,9 @@
 			padding-right: 5rem;padding-left: 5rem;
 			text-align: center;
 		}
-		@include media($mobile) {
-			opacity: 0;
-			visibility: hidden;
+		@include media($mobile){
+			text-align: left;
+			top: 55% !important;
 		}
 	}
 	.h1 {
@@ -55,6 +55,9 @@
 		top: 32.8rem;
 		@include media($medium){
 			font-size: 3.4rem !important; 
+		}
+		@include media($mobile){
+			font-size: 2.2rem !important; 
 		}
 	}
 	.h2 {
@@ -67,6 +70,9 @@
 		top: 36.5rem;
 		@include media($isMobile){
 			top:43% !important;
+		}
+		@include media($mobile){
+			top:65% !important;
 		}
 	}
 	img {
