--- a/assets/scss/modules/_prev-next.scss
+++ b/assets/scss/modules/_prev-next.scss
@@ -75,7 +75,7 @@
 			.txt-wrap {
 				left: 10rem;
 				@include media($mobile){
-					right: 5rem;
+					left: 5rem;
 				}
 			}
 		}
